--- a/Source/CriticalPath.Web/Views/Shared/DisplayTemplates/Product.cshtml
+++ b/Source/CriticalPath.Web/Views/Shared/DisplayTemplates/Product.cshtml
@@ -7,5 +7,5 @@
 }
 @if (Model != null)
 {
-    <div><a href='/Products/Details/@Model.Id'>@Model.ProductCode</a></div>
+    <div>@Model.ProductCode</div>
 }
