--- a/Source/CriticalPath.Web/Views/Shared/EditorTemplates/ProcessTemplate.cshtml
+++ b/Source/CriticalPath.Web/Views/Shared/EditorTemplates/ProcessTemplate.cshtml
@@ -7,5 +7,5 @@
 }
 @if (Model != null)
 {
-    <div><a href='/ProcessTemplates/Details/@Model.Id'>@Model.TemplateName</a></div>
+    <div>@Model.TemplateName</div>
 }
