--- a/Source/CriticalPath.Web/Views/Shared/EditorTemplates/SizingStandard.cshtml
+++ b/Source/CriticalPath.Web/Views/Shared/EditorTemplates/SizingStandard.cshtml
@@ -7,5 +7,5 @@
 }
 @if (Model != null)
 {
-    <div><a href='/SizingStandards/Details/@Model.Id'>@Model.Title</a></div>
+    <div>@Model.Title</div>
 }
