--- a/Source/CriticalPath.Web/Views/Shared/_PagerPartial.cshtml
+++ b/Source/CriticalPath.Web/Views/Shared/_PagerPartial.cshtml
@@ -16,7 +16,7 @@
 }
 @if (pageCount > 1)
 {
-    <nav>
+    <nav class="hidden-print">
         <ul class="pagination">
             @if (page == 1)
             {
