--- a/Source/CriticalPath.Web/Views/Shared/DisplayTemplates/ContactDTO.cshtml
+++ b/Source/CriticalPath.Web/Views/Shared/DisplayTemplates/ContactDTO.cshtml
@@ -7,5 +7,5 @@
 }
 @if (Model != null)
 {
-    <div><a href='/Contacts/Details/@Model.Id'>@Model.FullName</a></div>
+    <div>@Model.FullName</div>
 }
