--- a/Source/CriticalPath.Web/Views/Shared/DisplayTemplates/ProductDTO.cshtml
+++ b/Source/CriticalPath.Web/Views/Shared/DisplayTemplates/ProductDTO.cshtml
@@ -8,6 +8,6 @@
 @if (Model != null)
 {
     <div>
-        <a href='/Products/Details/@Model.Id'>@Model.ProductCode</a>
+        @Model.ProductCode
     </div>
 }
