--- a/Source/CriticalPath.Web/Content/tools.css
+++ b/Source/CriticalPath.Web/Content/tools.css
@@ -1,37 +1,36 @@
-/*
- * Float & Display
- ***************************/
-.fl { float: left !important; }
-.fr { float: right !important; }
+/* Float & Display */
+.fl { float: left !important;}
+.fr { float: right !important;}
 .db { display: block !important;}
 .dib { display: inline-block !important;}
 .dn { display: none !important;}
-.owh { overflow: hidden !important; }
-.clear { clear:both !important; }
-.clearfix{*zoom:1}
-.clearfix:before,.clearfix:after{display:table;line-height:0;content:""}
-.clearfix:after{clear:both}
-
-/*
- * Margin Plus 
- ***************************/
+.owh { overflow: hidden !important;}
+.clear { clear: both !important;}
+.clearfix { *zoom: 1;}
+.clearfix:before, .clearfix:after {
+    display: table;
+    line-height: 0;
+    content: "";
+}
+.clearfix:after { clear: both; }
+/* Margin Plus */
 .m0 { margin: 0 !important; }
 .mauto { margin: 0 auto !important; }
 .center { text-align: center !important; }
 .left { text-align: left !important; }
 .right { text-align: right !important; }
 .justify { text-align: justify; !important; }
-
-
-/*
- * Margin & Padding Left
- ***************************/
+/* Margin & Padding Left */
 .ml0 { margin-left: 0 !important; }
-.ml1 { margin-left:1px !important;}
-.ml2 { margin-left:2px !important;}
+.ml1 { margin-left: 1px !important; }
+.ml2 { margin-left: 2px !important; }
 .ml3 { margin-left: 3px !important; }
 .ml4 { margin-left: 4px !important; }
 .ml5 { margin-left: 5px !important; }
+.ml6 { margin-left: 6px !important; }
+.ml7 { margin-left: 7px !important; }
+.ml8 { margin-left: 8px !important; }
+.ml9 { margin-left: 9px !important; }
 .ml10 { margin-left: 10px !important; }
 .ml15 { margin-left: 15px !important; }
 .ml20 { margin-left: 20px !important; }
@@ -39,13 +38,16 @@
 .ml30 { margin-left: 30px !important; }
 .ml35 { margin-left: 35px !important; }
 .ml40 { margin-left: 40px !important; }
-
 .pl0 { padding-left: 0 !important; }
-.pl1 { padding-left:1px !important;}
-.pl2 { padding-left:2px !important;}
+.pl1 { padding-left: 1px !important; }
+.pl2 { padding-left: 2px !important; }
 .pl3 { padding-left: 3px !important; }
 .pl4 { padding-left: 4px !important; }
 .pl5 { padding-left: 5px !important; }
+.pl6 { padding-left: 6px !important; }
+.pl7 { padding-left: 7px !important; }
+.pl8 { padding-left: 8px !important; }
+.pl9 { padding-left: 9px !important; }
 .pl10 { padding-left: 10px !important; }
 .pl15 { padding-left: 15px !important; }
 .pl20 { padding-left: 20px !important; }
@@ -53,14 +55,17 @@
 .pl30 { padding-left: 30px !important; }
 .pl35 { padding-left: 35px !important; }
 .pl40 { padding-left: 40px !important; }
-
-/*
- * Margin & Padding Top
- ***************************/
+/* Margin & Padding Top */
 .mt0 { margin-top: 0 !important; }
-.mt1 { margin-top:1px !important;}
-.mt2 { margin-top:2px !important;}
+.mt1 { margin-top: 1px !important; }
+.mt2 { margin-top: 2px !important; }
+.mt3 { margin-top: 3px !important; }
+.mt4 { margin-top: 4px !important; }
 .mt5 { margin-top: 5px !important; }
+.mt6 { margin-top: 6px !important; }
+.mt7 { margin-top: 7px !important; }
+.mt8 { margin-top: 8px !important; }
+.mt9 { margin-top: 9px !important; }
 .mt10 { margin-top: 10px !important; }
 .mt15 { margin-top: 15px !important; }
 .mt20 { margin-top: 20px !important; }
@@ -68,13 +73,15 @@
 .mt30 { margin-top: 30px !important; }
 .mt35 { margin-top: 35px !important; }
 .mt40 { margin-top: 40px !important; }
-
 .pt0 { padding-top: 0 !important; }
 .pt1 { padding-top: 1px !important; }
 .pt2 { padding-top: 2px !important; }
+.pt3 { padding-top: 3px !important; }
+.pt4 { padding-top: 4px !important; }
 .pt5 { padding-top: 5px !important; }
 .pt7 { padding-top: 7px !important; }
 .pt8 { padding-top: 8px !important; }
+.pt9 { padding-top: 9px !important; }
 .pt10 { padding-top: 10px !important; }
 .pt15 { padding-top: 15px !important; }
 .pt20 { padding-top: 20px !important; }
@@ -82,16 +89,17 @@
 .pt30 { padding-top: 30px !important; }
 .pt35 { padding-top: 35px !important; }
 .pt40 { padding-top: 40px !important; }
-
-/*
- * Margin & Padding Right
- ***************************/
+/* Margin & Padding Right */
 .mr0 { margin-right: 0 !important; }
-.mr1 { margin-right:1px !important;}
-.mr2 { margin-right:2px !important;}
+.mr1 { margin-right: 1px !important; }
+.mr2 { margin-right: 2px !important; }
 .mr3 { margin-right: 3px !important; }
 .mr4 { margin-right: 4px !important; }
 .mr5 { margin-right: 5px !important; }
+.mr6 { margin-right: 6px !important; }
+.mr7 { margin-right: 7px !important; }
+.mr8 { margin-right: 8px !important; }
+.mr9 { margin-right: 9px !important; }
 .mr10 { margin-right: 10px !important; }
 .mr15 { margin-right: 15px !important; }
 .mr20 { margin-right: 20px !important; }
@@ -99,13 +107,16 @@
 .mr30 { margin-right: 30px !important; }
 .mr35 { margin-right: 35px !important; }
 .mr40 { margin-right: 40px !important; }
-
 .pr0 { padding-right: 0 !important; }
-.pr1 { padding-right:1px !important;}
-.pr2 { padding-right:2px !important;}
-.pr3 { padding-right:3px !important; }
-.pr4 { padding-right:4px !important; }
-.pr5 { padding-right:5px !important; }
+.pr1 { padding-right: 1px !important; }
+.pr2 { padding-right: 2px !important; }
+.pr3 { padding-right: 3px !important; }
+.pr4 { padding-right: 4px !important; }
+.pr5 { padding-right: 5px !important; }
+.pr6 { padding-right: 6px !important; }
+.pr7 { padding-right: 7px !important; }
+.pr8 { padding-right: 8px !important; }
+.pr9 { padding-right: 9px !important; }
 .pr10 { padding-right: 10px !important; }
 .pr15 { padding-right: 15px !important; }
 .pr20 { padding-right: 20px !important; }
@@ -113,14 +124,17 @@
 .pr30 { padding-right: 30px !important; }
 .pr35 { padding-right: 35px !important; }
 .pr40 { padding-right: 40px !important; }
-
-/*
- * Margin & Padding Bottom
- ***************************/
+/* Margin & Padding Bottom */
 .mb0 { margin-bottom: 0 !important; }
-.mb1 {margin-bottom:1px !important;}
-.mb2 {margin-bottom:2px !important;}
+.mb1 { margin-bottom: 1px !important; }
+.mb2 { margin-bottom: 2px !important; }
+.mb3 { margin-bottom: 3px !important; }
+.mb4 { margin-bottom: 4px !important; }
 .mb5 { margin-bottom: 5px !important; }
+.mb6 { margin-bottom: 6px !important; }
+.mb7 { margin-bottom: 7px !important; }
+.mb8 { margin-bottom: 8px !important; }
+.mb9 { margin-bottom: 9px !important; }
 .mb10 { margin-bottom: 10px !important; }
 .mb15 { margin-bottom: 15px !important; }
 .mb20 { margin-bottom: 20px !important; }
@@ -128,9 +142,12 @@
 .mb30 { margin-bottom: 30px !important; }
 .mb35 { margin-bottom: 35px !important; }
 .mb40 { margin-bottom: 40px !important; }
-
 .pb0 { padding-bottom: 0 !important; }
 .pb5 { padding-bottom: 5px !important; }
+.pb6 { padding-bottom: 6px !important; }
+.pb7 { padding-bottom: 7px !important; }
+.pb8 { padding-bottom: 8px !important; }
+.pb9 { padding-bottom: 9px !important; }
 .pb10 { padding-bottom: 10px !important; }
 .pb15 { padding-bottom: 15px !important; }
 .pb20 { padding-bottom: 20px !important; }
@@ -138,52 +155,28 @@
 .pb30 { padding-bottom: 30px !important; }
 .pb35 { padding-bottom: 35px !important; }
 .pb40 { padding-bottom: 40px !important; }
-
-/*
- * Fonts weights
- ***************************/
- .fontWeigthBold { font-weight:bold; }
- .fontWeigthBolder { font-weight:bolder; }
- .fontWeigthNormal { font-weight:normal; }
- .fontWeigthLight { font-weight:lighter}
-
-.fontSize25pc{
-    font-size: 25%;
+/* Fonts weights */
+.fontWeigthBold { font-weight: bold; }
+.fontWeigthBolder { font-weight: bolder; }
+.fontWeigthNormal { font-weight: normal; }
+.fontWeigthLight { font-weight: lighter; }
+/* Bootstrap buttons */
+.btn-flat, .btn-flat:active, .btn-flat.active {
+	-webkit-box-shadow: none;
+	box-shadow: none;
+	background-image: none;
 }
-.fontSize30pc{
-    font-size: 30%;
-}
-.fontSize40pc{
-    font-size: 40%;
-}
-.fontSize50pc{
-    font-size: 50%;
-}
-.fontSize60pc{
-    font-size: 60%;
-}
-.fontSize75pc{
-    font-size: 75%;
-}
- 
-.fontSize80pc{
-    font-size: 80% !important;
-}
-.fontSize90pc{
-    font-size: 90% !important;
-}
-.fontSize100pc{
-    font-size: 100% !important;
-}
-.fontSize125pc{
-    font-size: 120% !important;
-}
-.fontSize150pc{
-    font-size: 150% !important;
-}
-.fontSize175pc{
-    font-size: 175% !important;
-}
-.fontSize200pc{
-    font-size: 200% !important;
-}
+/* Fonts sizes */
+.fontSize25pc { font-size: 25%; }
+.fontSize30pc { font-size: 30%; }
+.fontSize40pc { font-size: 40%; }
+.fontSize50pc { font-size: 50%; }
+.fontSize60pc { font-size: 60%; }
+.fontSize75pc { font-size: 75%; }
+.fontSize80pc { font-size: 80% !important; }
+.fontSize90pc { font-size: 90% !important; }
+.fontSize100pc { font-size: 100% !important; }
+.fontSize125pc { font-size: 120% !important; }
+.fontSize150pc { font-size: 150% !important; }
+.fontSize175pc { font-size: 175% !important; }
+.fontSize200pc { font-size: 200% !important; }
