--- a/Source/CriticalPath.Web/Views/Products/Edit.cshtml
+++ b/Source/CriticalPath.Web/Views/Products/Edit.cshtml
@@ -37,10 +37,11 @@
             </div>
         </div>
 
+        @Html.HiddenFor(m => m.ImageUrl)
         <div class="form-group">
             @Html.Label(CommonStrings.ProductImage, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
             <div class="col-lg-5 col-md-6 col-sm-7">
-                @Html.Partial("_ImageUpload", new ImageUploadViewModel("ImageUrl", Model.ImageUrl))
+                @Html.Partial("_ImageUpload", new ImageUploadViewModel("ChangedImageFile", Model.ImageUrl))
                 @Html.ValidationMessageFor(m => m.ImageUrl, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -58,6 +59,6 @@
     <script src="~/libs/jquery.fileupload.js"></script>
     <script src="~/Scripts/App/fileUpload.js"></script>
     <script>
-        fileUpload.imageOnly = true;
+        fileUpload.imageOnly = false;
     </script>
 }
