Capacity field added to entities Supplier + Manufacturer

--- a/Source/CriticalPath.Web/Views/Manufacturers/Index.cshtml
+++ b/Source/CriticalPath.Web/Views/Manufacturers/Index.cshtml
@@ -43,6 +43,7 @@
                 <th>@Html.DisplayNameFor(model => model.CompanyName)</th>
                 <th>@Html.DisplayNameFor(model => model.ManufacturerCode)</th>
                 <th>@Html.DisplayNameFor(model => model.Supplier)</th>
+                <th>@Html.DisplayNameFor(model => model.Capacity)</th>
                 <th>@Html.DisplayNameFor(model => model.Country)</th>
                 <th>@Html.DisplayNameFor(model => model.City)</th>
                 <th>@Html.DisplayNameFor(model => model.Contacts)</th>
@@ -87,6 +88,7 @@
                     <td>@Html.DisplayFor(modelItem => item.CompanyName)</td>
                     <td>@Html.DisplayFor(modelItem => item.ManufacturerCode)</td>
                     <td>@Html.DisplayFor(modelItem => item.Supplier)</td>
+                    <td>@Html.DisplayFor(modelItem => item.Capacity)</td>
                     <td>@Html.DisplayFor(modelItem => item.Country)</td>
                     <td>@Html.DisplayFor(modelItem => item.City)</td>
                     <td>@item.Contacts.Count</td>
