--- a/Source/CriticalPath.Web/Views/Suppliers/Edit.cshtml
+++ b/Source/CriticalPath.Web/Views/Suppliers/Edit.cshtml
@@ -29,6 +29,13 @@
             </div>
         </div>
         <div class="form-group">
+            @Html.LabelFor(model => model.Capacity, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
+            <div class="col-lg-5 col-md-6 col-sm-7">
+                @Html.TextBoxFor(m => m.Capacity, new { @class = "form-control", autocomplete = "off" })
+                @Html.ValidationMessageFor(m => m.Capacity, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        <div class="form-group">
             @Html.LabelFor(model => model.Phone1, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
             <div class="col-lg-5 col-md-6 col-sm-7">
                 @Html.TextBoxFor(m => m.Phone1, new { @class = "form-control", autocomplete = "off" })
