--- a/Source/CriticalPath.Web/Views/Products/Create.cshtml
+++ b/Source/CriticalPath.Web/Views/Products/Create.cshtml
@@ -67,6 +67,6 @@
     <script src="~/libs/jquery.fileupload.js"></script>
     <script src="~/Scripts/App/fileUpload.js"></script>
     <script>
-        fileUpload.imageOnly = false;
+        fileUpload.imageOnly = true;
     </script>
 }
