--- a/Source/CriticalPath.Web/Views/PurchaseOrders/Index.cshtml
+++ b/Source/CriticalPath.Web/Views/PurchaseOrders/Index.cshtml
@@ -180,10 +180,10 @@
                                     </a>
                                 </li>
                             }
-                            @if (!item.IsApproved && canUserEdit)
+                            @if (canUserEdit)
                             {
                                 <li class="divider"></li>
-                                <li>@Html.ActionLink(EntityStrings.EditProduct, "Edit", "Products", new { id = item.ProductId }, null)</li>
+                                <li>@Html.ActionLink(EntityStrings.AddPOImage, "Create", "POImages", new { purchaseOrderId = item.Id }, null)</li>
                             }
                             @if (canUserCreate)
                             {
@@ -205,6 +205,11 @@
                             @if (item.Processes.Count == 0)
                             {
                                 <li>@Html.ActionLink(EntityStrings.CreateProcess, "Create", "Processes", new { purchaseOrderId = item.Id }, null)</li>
+                            }
+                            @if (!item.IsApproved && canUserEdit)
+                            {
+                                <li class="divider"></li>
+                                <li>@Html.ActionLink(EntityStrings.EditProduct, "Edit", "Products", new { id = item.ProductId }, null)</li>
                             }
                         </ul>
                     </div>
