--- a/Source/CriticalPath.Web/Views/PurchaseOrders/PartialDetails.cshtml
+++ b/Source/CriticalPath.Web/Views/PurchaseOrders/PartialDetails.cshtml
@@ -108,6 +108,15 @@
 
 <div class="row">
     <label class="control-label col-md-2 col-sm-3 mb5">
+        @Html.DisplayNameFor(model => model.Images)
+    </label>
+    <div class="col-md-10 col-sm-9 mt5">
+        @Html.DisplayFor(m => m.Images)
+    </div>
+</div>
+
+<div class="row">
+    <label class="control-label col-md-2 col-sm-3 mb5">
         @CommonStrings.ProductImage
     </label>
     <div class="col-lg-4 col-md-5 col-sm-5">
