--- a/Source/CriticalPath.Web/Views/Shared/DisplayTemplates/PurchaseOrderDTO.cshtml
+++ b/Source/CriticalPath.Web/Views/Shared/DisplayTemplates/PurchaseOrderDTO.cshtml
@@ -7,5 +7,71 @@
 }
 @if (Model != null)
 {
-    <div>@Model.Title</div>
+    string accordionId = string.Format("accordion{0}", Model.Id);
+    string collapseId = string.Format("collapse{0}", Model.Id);
+    <div class="accordion">
+        <div class="accordion-group shadedRoundCaption" id='@accordionId'>
+            <div class="accordion-heading fontSize150pc">
+                <a class="accordion-toggle" data-toggle="collapse" data-parent='#@accordionId' href='#@collapseId'>
+                    @if (Model.Cancelled)
+                    {
+                        @Html.DisplayFor(m => m.Cancelled)
+                    }
+                    @Html.DisplayFor(m => m.PoNr)
+                </a>
+            </div>
+            <div id='@collapseId' class="accordion-body collapse">
+                <div class="accordion-inner text-left ml10 mt20 fontSize125pc">
+                    @*<div class="fontSize125pc">
+                        @Model.Product.ProductCode
+                        @if (Model.Product.Category != null)
+                        {
+                            if (Model.Product.Category.ParentCategory != null)
+                            {
+                                @: [@Model.Product.Category.ParentCategory.CategoryName /
+                            }
+                            else
+                            {
+                                @:[
+                            }
+                            @: @Model.Product.Category.CategoryName]
+                        }
+                    </div>*@
+                    @*<div class="fontSize125pc">
+                        @Html.DisplayFor(m => m.Customer.CompanyName)
+                    </div>*@
+                    <div>
+                        @Html.DisplayNameFor(m => m.OrderDate):
+                        @Html.DisplayFor(m => m.OrderDate)
+                    </div>
+                    <div>
+                        @Html.DisplayNameFor(m => m.DueDate):
+                        @Html.DisplayFor(m => m.DueDate)
+                    </div>
+                    <div>
+                        <span class="checkboxText">@Html.DisplayNameFor(m => m.IsApproved)</span>
+                        @Html.DisplayFor(m => m.IsApproved)
+                        <span class="checkboxText">
+                            @Html.DisplayFor(m => m.ApproveDate)
+                        </span>
+                    </div>
+                    @if (Model.Cancelled)
+                    {
+                        <div>
+                            <span class="text-danger">@Html.DisplayNameFor(m => m.CancelDate):</span>
+                            @Html.DisplayFor(m => m.CancelDate)
+                        </div>
+                        <div>
+                            <span class="text-danger">@Html.DisplayNameFor(m => m.CancellationReason):</span>
+                            @Html.DisplayFor(m => m.CancellationReason)
+                        </div>
+                    }
+
+                    <div class="mt10 mb5">
+                        @Html.ActionLink(ActionStrings.Details, "Details", "PurchaseOrders", new { id = Model.Id }, new { @class = "btn btn-sm" })
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 }
