--- a/Source/CriticalPath.Web/Views/Shared/_IndexScriptsPartial.cshtml
+++ b/Source/CriticalPath.Web/Views/Shared/_IndexScriptsPartial.cshtml
@@ -23,7 +23,7 @@
         });
     }
     function showImage(title, imgUrl, cancelButton) {
-        var innerHtml = "<img src='" + imgUrl + "' style='width:100%;' />";
+        var innerHtml = "<img src='" + imgUrl + "' class='img-responsive center-block' />";
         showMessageBox(title, innerHtml, cancelButton);
     }
     function showMessageBox(title, text, cancelButton) {
