--- a/Source/CriticalPath.Web/Views/Processes/Index.cshtml
+++ b/Source/CriticalPath.Web/Views/Processes/Index.cshtml
@@ -19,7 +19,7 @@
 
     var title = EntityStrings.Processes;
 }
-<div class="row well">
+<div class="row well hidden-print">
     <div class="col-md-8 col-sm-7">
         <h4>@title</h4>
     </div>
