--- a/Source/CriticalPath.Web/Views/PurchaseOrders/_ProductSizingPartial.cshtml
+++ b/Source/CriticalPath.Web/Views/PurchaseOrders/_ProductSizingPartial.cshtml
@@ -107,7 +107,7 @@
     </div>
 </div>
 <div class="form-group">
-    @Html.Label(EntityStrings.SizeRatio, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
+    @Html.Label(EntityStrings.POSizeRatio, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
     <div class="col-lg-2 col-md-3 col-sm-3">
         <input id="SizeRatioDivisorDisplay" class="form-control text-right"
                type="number" readonly="readonly" autocomplete="off" value="0" />
