--- a/Source/CriticalPath.Web/Views/Suppliers/Details.cshtml
+++ b/Source/CriticalPath.Web/Views/Suppliers/Details.cshtml
@@ -55,10 +55,10 @@
 </div>
 <div class="row">
     <label class="control-label col-md-2 col-sm-3">
-        @Html.DisplayNameFor(model => model.Products)
+        @Html.DisplayNameFor(model => model.Capacity)
     </label>
     <div class="col-md-10 col-sm-9">
-        @Html.DisplayFor(m => m.Products)
+        @Html.DisplayFor(m => m.Capacity)
     </div>
 </div>
 <div class="row">
