Added POShipment entity

--- a/Source/CriticalPath.Web/Views/PurchaseOrders/Create.cshtml
+++ b/Source/CriticalPath.Web/Views/PurchaseOrders/Create.cshtml
@@ -45,10 +45,10 @@
             </div>
         </div>
         <div class="form-group">
-            @Html.LabelFor(model => model.KimballNr, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
+            @Html.LabelFor(model => model.CustomerRefNr, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
             <div class="col-lg-5 col-md-6 col-sm-7">
-                @Html.TextBoxFor(m => m.KimballNr, new { @class = "form-control", autocomplete = "off" })
-                @Html.ValidationMessageFor(m => m.KimballNr, "", new { @class = "text-danger" })
+                @Html.TextBoxFor(m => m.CustomerRefNr, new { @class = "form-control", autocomplete = "off" })
+                @Html.ValidationMessageFor(m => m.CustomerRefNr, "", new { @class = "text-danger" })
             </div>
         </div>
         <div class="form-group">
@@ -229,10 +229,10 @@
             </div>
         </div>
         <div class="form-group">
-            @Html.LabelFor(model => model.WoovenLabel, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
+            @Html.LabelFor(model => model.WovenLabel, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
             <div class="col-lg-5 col-md-6 col-sm-7">
-                @Html.EditorFor(m => m.WoovenLabel, new { htmlAttributes = new { @class = "form-control", autocomplete = "off" } })
-                @Html.ValidationMessageFor(m => m.WoovenLabel, "", new { @class = "text-danger" })
+                @Html.EditorFor(m => m.WovenLabel, new { htmlAttributes = new { @class = "form-control", autocomplete = "off" } })
+                @Html.ValidationMessageFor(m => m.WovenLabel, "", new { @class = "text-danger" })
             </div>
         </div>
         <div class="form-group">
