--- a/Source/CriticalPath.Web/Views/PurchaseOrders/Edit.cshtml
+++ b/Source/CriticalPath.Web/Views/PurchaseOrders/Edit.cshtml
@@ -296,6 +296,14 @@
         @Html.Partial("_ProductSizingPartial")
 
         <div class="form-group">
+            @Html.LabelFor(model => model.InitialComments, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
+            <div class="col-lg-5 col-md-6 col-sm-7">
+                @Html.TextAreaFor(m => m.InitialComments, new { @class = "form-control", autocomplete = "off" })
+                @Html.ValidationMessageFor(m => m.InitialComments, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
             @Html.LabelFor(model => model.Notes, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
             <div class="col-lg-5 col-md-6 col-sm-7">
                 @Html.TextAreaFor(m => m.Notes, new { @class = "form-control", autocomplete = "off" })
